# getting-started-with-cuda-opencv

./: CMakeLists.txt  README.md  sobel_cpu.cc  sobel_gpu_1_naive.cc  sobel_gpu_2_single_alloc.cc  sobel_gpu_3_pinned_mem.cc  sobel_gpu_4_shared_mem.cc  sobel_gpu_5_pinned_mem_streams.cc  sobel_gpu_5_shared_mem_streams.cc
